[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
aoc_lib = { version = "0.1.0", path = "../aoc_lib" }
itertools = "0.12.1"
md5 = "0.7.0"
num = "0.4.1"
pathfinding = "4.8.2"
rayon = "1.8.1"
regex = "1.10.3"
serde = "1.0.196"
serde_json = "1.0.113"
