[package]
name = "aoc-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_lib = { version = "0.1.0", path = "../aoc_lib" }
itertools = "0.12.1"
lazy-regex = "3.1.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
pathfinding = "4.9.1"
rangemap = "1.5.0"
rayon = "1.8.1"
regex = "1.10.3"
