[package]
name = "aoc-2017"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_lib = { version = "0.1.0", path = "../aoc_lib" }
bit-vec = "0.6.3"
hex2d = "1.1.0"
itertools = "0.12.1"
pathfinding = "4.9.1"
rayon = "1.9.0"
regex = "1.10.3"
