[package]
name = "aoc-2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
aoc_lib = { version = "0.1.0", path = "../aoc_lib" }
circular-buffer = "0.1.6"
colored = "2.1.0"
itertools = "0.12.1"
lazy-regex = "3.1.0"
pathfinding = "4.9.1"
rayon = "1.9.0"
