[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
aoc_lib = { version = "0.1.0", path = "../aoc_lib" }
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
nodit = "0.9.2"
num = "0.4.1"
pathfinding = "4.8.2"
rangemap = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
